# quick-sermon

./: .env.example  .gitignore  CLAUDE.md  Makefile  PRD-sistema-clips-pregacoes-v2.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: CLAUDE.md  Dockerfile  Dockerfile.worker  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  seed.py  worker.py
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  94ce106c793c_create_videos_table.py  a1cbb5116dde_add_video_metadata_fields.py  a8c3e1f5b2d6_add_video_detections_table.py  b3f7a2c91d4e_create_clips_table.py  c4e8f1a23b7d_add_cascade_delete_to_clips_video_fk.py  d5f9g2b34c8e_create_youtube_tables.py  e6a0f4c18d92_add_review_fields_to_clips.py  f7b1d9a25e44_add_pipeline_and_workflow_tracking.py
backend/app/core/: app.py  config.py  database.py  enums.py  exceptions.py  logging.py  middleware.py  schemas.py  security.py  temporal_client.py  ytdlp.py
backend/app/modules/analytics/: routes.py  schemas.py
backend/app/modules/auth/: dependencies.py  exceptions.py  routes.py  schemas.py
backend/app/modules/clips/: activities.py  dependencies.py  enums.py  exceptions.py  models.py  routes.py  schemas.py  workflows.py
backend/app/modules/content/: activities.py  dependencies.py  exceptions.py  routes.py  schemas.py
backend/app/modules/health/: routes.py
backend/app/modules/users/: dependencies.py  enums.py  exceptions.py  models.py  routes.py  schemas.py
backend/app/modules/videos/: activities.py  enums.py  (+6 more)
backend/scripts/: test_detection_dataset.py
(+211 files in other folders)
